Fix discount label dimension and text vertical align

--- a/css/style.css
+++ b/css/style.css
@@ -34,10 +34,12 @@
 }
 
 .discount {
+  width: 60px;
+  height: 40px;
+  line-height: 40px;
   position: absolute;
   top: 0;
   right: 0;
-  padding: 10px;
 }
 
 .green {
